@@ -8,6 +8,8 @@
  - changed default chmod of upload folders to 0777 (mamba/goffy)
  - fixed lang bug in XoopsConfirm (mamba/goffy)
  - increased default size for IP field (mamba/goffy)
+ - fixed lang in blocks (heyula/goffy)
+ - added link in blocks (heyula/goffy)
 
 <h5>3.04 Final   [2020-11-11]</h5>  Dev: XOOPS 2.5.11, PHP 7.4.5
 <hr>
